[project]
name = "anthil"
version = "0.1.0"

dependencies = [
    "flask==2.3.3",
    "python-dotenv==1.1.0",
    "sqlalchemy==2.0.39",
    "psycopg2==2.9.10"
]

[project.optional-dependencies]
dev = [
    "mypy==1.15.0",
    "ruff==0.11.5",
    "flake8==7.2.0",
    "pytest==8.1.1"
]

[tool.setuptools]
packages = ["anthill"]
