[project]
name = "anthil"
version = "0.1.0"

dependencies = [
    "flask>=2.3.3,<2.4",
    "python-dotenv>=1.1.0,<2",
    "sqlalchemy==2.0.39",
    "psycopg2-binary==2.9.10",
    "alembic>=1.15.2",
    "alembic-postgresql-enum",
    "pydantic>=2.7,<3",

]

[project.optional-dependencies]
dev = [
    "mypy==1.15.0",
    "ruff==0.11.5",
    "flake8==7.2.0",
    "pytest==8.1.1"
]

[tool.setuptools]
packages = ["anthill"]
